--- a/tf_flex.css
+++ b/tf_flex.css
@@ -20,8 +20,28 @@
    Base Flex Styles
    ================
 */
+body {
+   display: -webkit-flex;
+   display: flex;
 
+   -webkit-flex-flow: row wrap;
+   flex-flow: row wrap;
+}
 
+header,
+footer {
+   width: 100%;
+}
+
+aside {
+   -webkit-flex: 1 1 120px;
+   flex: 1 1 120px;
+}
+
+#main {
+   -webkit-flex: 3 1 361px;
+   flex: 3 1 361px;
+}
 
 
 /* =========================
@@ -29,21 +49,11 @@
    =========================
 */
 
-@media only screen and (max-width: 480px) {
-  
-
- 
-}
+@media only screen and (max-width: 480px) {}
 
 /* ============================================
    Tablet and Desktop Styles: 481px and greater 
    ============================================
 */
 
-@media only screen and (min-width: 481px) {
-
-
-
-}
-
-
+@media only screen and (min-width: 481px) {}
