--- a/tf_flex.css
+++ b/tf_flex.css
@@ -38,9 +38,21 @@ aside {
    flex: 1 1 120px;
 }
 
-#main {
+section#main {
    -webkit-flex: 3 1 361px;
    flex: 3 1 361px;
+}
+
+section#topics {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-flow: row wrap;
+   flex-flow: row wrap;
+}
+
+section#topics article {
+   -webkit-flex: 1 1 200px;
+   flex: 1 1 200px;
 }
 
 
@@ -49,11 +61,34 @@ aside {
    =========================
 */
 
-@media only screen and (max-width: 480px) {}
+@media only screen and (max-width: 480px) {
+   aside {
+      -webkit-order: 99;
+      order: 99;
+   }
+
+   footer {
+      -webkit-order: 100;
+      order: 100;
+   }
+
+}
 
 /* ============================================
    Tablet and Desktop Styles: 481px and greater 
    ============================================
 */
 
-@media only screen and (min-width: 481px) {}
+@media only screen and (min-width: 481px) {
+   nav.horizontal ul {
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-flow: row nowrap;
+      flex-flow: row nowrap;
+   }
+
+   nav.horizontal li {
+      -webkit-flex: 1 1 auto;
+      flex: 1 1 auto;
+   }
+}
