--- a/tf_navicon.css
+++ b/tf_navicon.css
@@ -20,7 +20,9 @@
    Base Styles
    ===========
 */
-
+a#navicon {
+   display: none;
+}
 
 
 
@@ -30,6 +32,7 @@
 */
 
 @media only screen and (max-width: 480px) {
-
-   
+   a#navicon {
+      display: block;
+   }
 }
