--- a/tf_navicon.css
+++ b/tf_navicon.css
@@ -35,4 +35,13 @@ a#navicon {
    a#navicon {
       display: block;
    }
+
+   nav.horizontal ul {
+      display: none;
+   }
+
+   a#navicon:hover+ul,
+   nav.horizontal ul:hover {
+      display: block;
+   }
 }
